# claude-code-django

./: .gitignore  CLAUDE.md  Makefile  PERSONAL.md  README.md  best_practices.md  docker-compose.yml
.claude/hooks/: skill-rules.json
.claude/skills/: README.md
.claude/skills/code-quality/: SKILL.md
.claude/skills/seed-artifacts/: SKILL.md
.claude/skills/upstream-artifacts/: SKILL.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/apps/accounts/: models.py  serializers.py  urls.py  views.py
backend/apps/core/: models.py  serializers.py  urls.py  views.py
backend/apps/core/tests/: test_items.py
backend/config/: settings.py  urls.py
docs/: APRESENTATION.md  ARCHITECTURE.md  INCREMENTS.md  REFERENCES.md
docs/slides/: README.md  index.html  package-lock.json  package.json  server.mjs
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: client.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  items.ts
frontend/src/views/: HomeView.vue  ItemsView.vue  LoginView.vue
scripts/: apply_increments.sh  bootstrap.sh  dev.sh
scripts/increments/: 001_seed_admin.sh
